--- a/index.org
+++ b/index.org
@@ -381,7 +381,7 @@
 - 識別子はその意味を定義してから使う
   - 意味の定義の仕方はプログラミング言語によって様々
 
-* 字句構造：プログラミングの表記法
+* 字句構造：プログラミングの表記法 :#03:
 ** 記号・区切り文字・演算子
 *** キーボードにある記号の読み方
 
@@ -827,7 +827,7 @@ block4-2
 - 一つ一つのブロックは何らかの意味のまとまりを持つ
 - 小さな積み木をどんどん積み重ね、大きなプログラムにする
 
-* 字句構造：型と様々な直値                                              :#04:
+* 字句構造：型と様々な直値 :#04:
 ** 情報量と型
 *** 情報量（bit）のおさらい
 :PROPERTIES:
@@ -1186,7 +1186,7 @@ class Main {
 
 #+RESULTS:
 
-* 変数の宣言・代入・参照・初期化と名前                                  :#05:
+* 変数の宣言・代入・参照・初期化と名前 :#05:
 ** 変数（Variable）とは？
 :PROPERTIES:
 :CUSTOM_ID: 変数variableとは
@@ -1556,7 +1556,7 @@ class Main {
 9. 変数の定義と初期化を同時に行う方法\\
    [[https://repl.it/@ychubachi/Variable9][Repl.it - Variable9]]
 
-* 式の評価と数値の演算                                                  :#06:
+* 式の評価と数値の演算 :#06:
 ** 式の評価
 
 - 式（Expression）
@@ -2386,7 +2386,7 @@ System.out.println(! 10 > 5);
 
 #+RESULTS:
 
-* 文字列型（String）                                                    :#09:
+* 文字列型（String） :#09:
 ** 文字列型
 :PROPERTIES:
 :CUSTOM_ID: section-3
@@ -3803,6 +3803,7 @@ stop
 : 5
 : 6
 
+* 構造化プログラミング3 :#13:
 ** 応用：サイコロを振り6が出るまで繰り返す
 
 - =Math.random()= メソッド
@@ -3866,7 +3867,6 @@ stop
 - [[https://repl.it/@ychubachi/Zao-riFan-siHou-Zhi-Pan-Ding][Repl.it - 繰り返し（後置判定）]]
 - [[https://repl.it/@ychubachi/Zao-riFan-siZhong-Zhi-Pan-Ding][Repl.it - 繰り返し（中置判定）]]
 
-* 構造化プログラミング4 :#13:
 ** 例外（Exception Handling）
 *** 例外とは？
 - 正常に処理が行えなくなった場合、例外を発生させる
@@ -3977,6 +3977,26 @@ stop
 - 必要な場合
   - 例外が起こり得る可能性の高い、特定のメソッドを呼び出す場合
   - ファイルやネットワークへのアクセス など
+
+*** 実行時例外（Runtime Exception）の例（文字列型の場合）
+
+- 文字列の長さを超えた場合
+
+#+begin_src java :results output
+  String str = "あいうえお";
+  System.out.println(str.charAt(6));
+#+end_src
+
+#+RESULTS:
+
+- オブジェクトがnullであった場合
+
+#+begin_src java :results output
+  String str = null;
+  System.out.println(str.length()); // 実行できない
+#+end_src
+
+#+RESULTS:
 
 ** サブルーチン（subroutine）
 *** サブルーチンとは？
@@ -4284,41 +4304,142 @@ stop
   - 任意の場所から復帰可能
   - 復帰の際、戻り値の値を指定する
 
-*** COMMENT サンプルプログラム
+*** サンプルプログラム
 
 - [[https://repl.it/@ychubachi/mesotudoJia-Suan][Repl.it - メソッド（加算）]]
 - [[https://repl.it/@ychubachi/mesotudoAi-Zan][Repl.it - メソッド（挨拶）]]
 
-** COMMENT 実行時例外（Runtime Exception）の例（文字列型の場合）
+* 最終課題
 
-- 文字列の長さを超えた場合
-
-#+begin_src java :results output
-  String str = "あいうえお";
-  System.out.println(str.charAt(6));
-#+end_src
-
-#+RESULTS:
-
-- オブジェクトがnullであった場合
-
-#+begin_src java :results output
-  String str = null;
-  System.out.println(str.length()); // 実行できない
-#+end_src
-
-#+RESULTS:
-
-* COMMENT 課題について
-- 来週中にGoogleクラスルームに掲示
-- 課題A
-  - プログラミング言語、プログラミングに関するレポート
-- 課題B
-  - Javaプログラミング演習
+** 課題について
+- Javaプログラミングに関するレポートを提出
+- 提出先
+  - Googleクラスルーム
+- 提出方法
+  - Googleドキュメントでレポートを作成する
+  - 学籍番号、氏名を記載すること
+  - 課題と問題の番号、及び解答を記載すること
 - 締め切り
-  - 8/11（予定）
+  - 8/4（金曜日）中
 
-* COMMENT 構造化オブジェクト指向（参考）
+** 課題1
+
+人間が計算機を作り、計算機科学を研究して発展させてきた背景には、人が手で計算することでは到底求められない数を正確に計算させたいという要求があった。
+
+その代表的な数として円周率（π）がある。紀元前250頃、アルキメデスは幾何学的な計算により円周率は約3.14であることを求めた。時は流れ、18年初頭にマチンは100桁まで手計算で求めた。19世紀半ばシャンクスは707桁まで計算したが、死後、527桁より先の計算は間違いであることが指摘された。
+
+計算機を用いて最初に円周率が求められたのは1949年のことであった。ENIACという計算機を用いて円周率を求め2037桁計算した。計算にかかった時間は70時間ほどであったという。そして、2022年6月にグーグルは円周率を100兆桁まで求めたことを発表した。このように、計算機を用いると人間が手で行うことは不可能だと考えられる計算を行うことができる。
+
+次のプログラムは「Leibniz」の公式により円周率を計算するプログラムである（ChatGPTが作成したものを改変）。現在、小数点1桁まで正しく計算できる。このプログラムをもとに、できるだけ多くの桁数を正確に求められるように改良しなさい。
+
+なお、Java言語では予め、Math.PIという変数に円周率が代入されているので、これとの比較を行うことで、正しい桁数がわかる。
+
+#+begin_src java :results output
+  public class CalculatePi {
+
+      public static void main(String[] args) {
+          int terms = 100;
+
+          double pi = 0.0;
+          boolean positive = true;
+          for (int i = 0; i < terms; i++) {
+              int divisor = 2 * i + 1;
+              if (positive) {
+                  pi += 1.0 / divisor;
+              } else {
+                  pi -= 1.0 / divisor;
+              }
+              positive = !positive;
+          }
+          pi *= 4;
+
+          System.out.println("Leibnizの公式 による円周率の近似値: " + pi);
+          System.out.println("Math.PI       による円周率の近似値: " + Math.PI);
+      }
+  }
+#+end_src
+
+#+RESULTS:
+: Leibnizの公式 による円周率の近似値: 3.1315929035585537
+: Math.PI       による円周率の近似値: 3.141592653589793
+
+問題
+- (1) 改良したプログラムのURL（repl.it）
+- (2) プログラムをどのように変更したか？
+- (3) 求められた桁数は小数点以下何桁か？
+- (4) 苦労した点・工夫した点
+- (5) この課題の感想
+
+** 課題2
+
+素数とは1とそれ自身の数以外では割り切れない整数である。小さい方から、2、3、5、7、13、17、19、23、29・・・と続く。全ての素数を導き出す公式は存在しないとされている。しかし、計算機で計算させることはできる。
+
+ChatGPTに、100までの素数を求めるプログラムを作らせたところ、次のプログラムを得た（授業で習った範囲の知識に限定するために一部改変）。
+また、計算にかかる時間をミリ秒で計測するためのコードを追加した（★で示した）。
+
+このプログラムをもとに、できるだけ多くの素数を求めるように改良したい。
+
+#+begin_src java :results output
+    long startTime = System.currentTimeMillis(); // ★
+
+    int n = 100;
+    boolean[] primes = new boolean[n + 1]; // 0〜nまでの配列を用意
+
+    for (int i = 2; i <= n; i++) {
+        primes[i] = true;
+    }
+
+    for (int i = 2; i * i <= n; i++) {
+        if (primes[i]) {
+            for (int j = i * i; j <= n; j += i) {
+                primes[j] = false;
+            }
+        }
+    }
+
+    long endTime = System.currentTimeMillis(); // ★
+    System.out.println("\n" + n +
+                       "までの素数を求める計算にかかった時間は"
+                       + (endTime - startTime) + "ミリ秒です。");
+
+    System.out.println("2 から " + n + " までの素数：");
+    for (int i = 2; i <= n; i++) {
+        if (primes[i]) {
+            System.out.print(i + " ");
+        }
+    }
+#+end_src
+
+#+RESULTS:
+:
+: 100までの素数を求める計算にかかった時間は0ミリ秒です。
+: 2 から 100 までの素数：
+: 2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97
+
+問題
+- (1) 改良したプログラムのURL（repl.it）
+- (2) プログラムをどのように変更したか？
+- (3) 求められた素数は何個か？
+- (4) 苦労した点・工夫した点
+- (5) この計算方法の名前は何か？
+- (6) この課題の感想
+
+** 課題３
+
+コンピュータを利用すると、とても大きな数や、とても小さな数を用いた様々な計算を行うことができる。特に天文学の分野ではそのような数を用いた計算が必須である。まさに、「天文学的な数」を計算させることが求められる。
+
+さて、一週間は、日、月、火、水、木、金、土の7日間である。それぞれの曜日は太陽系の天体と対応しているが、それぞれ大きさも重さもまちまちである。
+
+そこで、全ての曜日の長さが等しく24時間になっているのは不自然だとは考えられないか？それぞれの天体のデータを調べ、次の問題に答えよ。結果と、計算のために作製したプログラムを示せ（repl.itのURL）。
+
+問題
+- (1) 各曜日の長さが各天体の「直径」に比例すると考えた時、曜日ごとの時間はどうなるか？
+- (2) 各曜日の長さが各天体の「体積」に比例すると考えた時、曜日ごとの時間はどうなるか？
+- (3) 各曜日の長さが各天体の「質量」に比例すると考えた時、曜日ごとの時間はどうなるか？
+- (4) 苦労した点・工夫した点
+- (5) この課題の感想。
+
+* COMMENT オブジェクト指向（参考）
 ** クラスとインスタンスとは？
 
 - クラスとは情報の入れ物の「型」
@@ -4400,7 +4521,7 @@ stop
     - System.out の out はここから来ている
   - 標準エラー出力（standar error）もあるがここでは割愛
 
-** COMMENT サンプルプログラム
+** サンプルプログラム
 
 - [[https://repl.it/@ychubachi/Biao-Zhun-Ru-Li-Zheng-Shu-Shi-Shu#Main.java][Repl.it -
   標準入力（整数・実数）]]
@@ -4419,51 +4540,7 @@ stop
 
 ここらへん、Java2でやると思うので、引き続き履修してね！
 
-* COMMENT 最終課題
-** 今日が最後の授業です
-:PROPERTIES:
-:CUSTOM_ID: 今日が最後の授業です
-:END:
-
-- 最終課題（習った範囲からしか出しません）
-  - 1）レポート試験\\
-    Google Classroomで実施
-  - 2）プログラミング試験\\
-    repl.itで実施
-- 課題を提示する日
-  - 8/7予定\\
-    Google Classroomのストリームにて連絡
-- 提出期限
-  - 8/21予定（2週間）
-
-** 授業アンケートにご協力ください
-:PROPERTIES:
-:CUSTOM_ID: 授業アンケートにご協力ください
-:END:
-
---------------
-
-つきましては、学期末の大変お忙しい時期に誠に恐縮ですが、最終授業の際に、
-
-学生に対し、「アンケート実施期間にCampusSquareにログインして授業評価アン
-
-ケートに必ず回答するように」先生よりお声がけいただきたくお願い申し上げる
-
-次第です。学生への呼びかけは、オンライン授業の中や、オンデマンド講義の中
-
-でのメッセージに限らず、授業関連の連絡メールやGoogle Classroomなどご利用
-
-になりやすい方法でしていただければありがたく存じます。
-
-アンケートの実施期間は以下の通りです。
-
-2020年7月30日（木）午前0時～8月5日（水）午後11時59分
-
-＊期間延長の可能性があります
-
---------------
-
-** 緊急企画！「2020夏休み特別プログラミング塾開催」
+* COMMENT 緊急企画！「2020夏休み特別プログラミング塾開催」
 :PROPERTIES:
 :CUSTOM_ID: 緊急企画2020夏休み特別プログラミング塾開催
 :END:
