--- a/index.org
+++ b/index.org
@@ -240,6 +240,49 @@
   - [[https://docs.oracle.com/javase/specs/jls/se18/html/jls-3.html#jls-3.2][Chapter 3. Lexical Structure]]
 #+end_comment
 
+*** キーボードにある記号の読み方
+
+| 記号   | 一般的な読み方                               | 英語スペル                     | JIS規格の名称                                      |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| (      | *開き括弧* （かっこ）                          | left paren、open parenthesis   | 左小括弧                                           |
+| )      | *閉じ括弧* （こっか）                          | right paren、close parenthesis | 右小括弧                                           |
+| {      | *開き中括弧*                                   | left brace、open brace         | 左中括弧                                           |
+| }      | *閉じ中括弧*                                   | right brace、close brace       | 右中括弧                                           |
+| [      | *開き大括弧*                                   | left bracket、open bracket     | 左大括弧                                           |
+| ]      | *閉じ大括弧*                                   | right bracket、close bracket   | 右大括弧                                           |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| =      | *イコール*                                     | equals                         | 等号                                               |
+| +      | *プラス*                                       | plus                           | 正符号                                             |
+| -      | *マイナス* 、ハイフン、ダッシュ （本当は別物） | hyphen、dash                   | ハイフン、負符号                                   |
+| *      | アスタリスク *スター* コメ印 掛算記号          | asterisk                       | アスタリスク                                       |
+| ／     | *スラッシュ* 、割算記号                        | slash                          | 斜線                                               |
+| ＼(￥) | *バックスラッシュ*                             | backslash                      | 円記号                                             |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| <      | *小なり記号*                                   | less than                      | 不等号（より小）                                   |
+| >      | *大なり記号*                                   | greater than                   | 不等号（より大）                                   |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| '      | *シングルクウォート* 、アポストロフィ、ちょん  | single quote                   | シングルクォート、アポストロフィー（本来は別もの） |
+| `      | *バッククオート*                               | back quote                     | アクサングラーブ                                   |
+| "      | *ダブルクォート* 、ちょんちょん                | double quote                   | 引用符                                             |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| ,      | *カンマ*                                       | comma                          | コンマ、セディユ                                   |
+| .      | *ピリオド* 、 *ドット* 、ポイント                | period、dot、point             | 終止符                                             |
+| ;      | *セミコロン*                                   | semicolon                      | セミコロン                                         |
+| :      | *コロン*                                       | colon                          | コロン                                             |
+| ?      | *はてな記号* 、クエスチョン・マーク            | question mark                  | 疑問符                                             |
+| !      | *びっくり記号*                                 | exclamation                    | 感嘆符                                             |
+|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
+| #      | *シャープ記号* 、ナンバー、ハッシュ            | number sign、pound sign、hash  | 番号記号、井桁（いげた）                           |
+| $      | *ドル記号*                                     | dollar sign                    | ドル記号                                           |
+| %      | *パーセント*                                   | percent                        | パーセント                                         |
+| &      | *アンド記号* 、アンパサンド                    | ampersand、and sign            | アンパサンド                                       |
+| ~      | *チルダ* 、にょろ記号                          | tilde                          | 波線、波線符号                                     |
+| _      | *アンダースコア*                               | underscore                     | アンダライン                                       |
+| ^      | *ハット* 、サーカムフレックス                  | hat, circumflex                | アクサンシルコンフレックス、キャロット             |
+| \vert      | バー *縦棒*                                    | vertical bar                   | 縦線                                               |
+
+- [[http://capm-network.com/?tag=%E3%82%AD%E3%83%BC%E3%83%9C%E3%83%BC%E3%83%89%E7%89%B9%E6%AE%8A%E8%A8%98%E5%8F%B7%E3%81%AE%E8%AA%AD%E3%81%BF%E6%96%B9][キーボード特殊記号の読み方 CapmNetwork]]
+
 *** 改行文字
 
 - プログラムは複数の行からなる
@@ -365,7 +408,7 @@
 - 名前は単なる名前ではなく、識別子である
   - appleとringo
 - ある識別子が他の識別子と同じであると判断されるためには、一字一句同じ名前である必要がある
-- 逆に言えば、一字一句同じ名前であるれば、それらは「同じもの」である
+- 逆に言えば、一字一句同じ名前であれば、それらは「同じもの」である
   - 似たような概念であっても別なものとして扱いたい場合は、必ず別の名前をつけなくてはならない
     - apple1
     - apple2
@@ -383,49 +426,6 @@
 
 * 字句構造：プログラミングの表記法 :#03:
 ** 記号・区切り文字・演算子
-*** キーボードにある記号の読み方
-
-| 記号   | 一般的な読み方                               | 英語スペル                     | JIS規格の名称                                      |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| (      | 左小括弧 括弧開き （かっこ）                 | left paren、open parenthesis   | *左小括弧*                                           |
-| )      | 右小括弧 括弧閉じ （こっか）                 | right paren、close parenthesis | *右小括弧*                                           |
-| {      | 左中括弧 中括弧開き                          | left brace、open brace         | *左中括弧*                                           |
-| }      | 右中括弧 中括弧閉じ                          | right brace、close brace       | *右中括弧*                                           |
-| [      | 左大括弧                                     | left bracket、open bracket     | *左大括弧*                                           |
-| ]      | 右大括弧                                     | right bracket、close bracket   | *右大括弧*                                           |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| =      | *イコール*                                     | equals                         | 等号                                               |
-| +      | *プラス*                                       | plus                           | 正符号                                             |
-| -      | *マイナス* 、ハイフン、ダッシュ （本当は別物） | hyphen、dash                   | ハイフン、負符号                                   |
-| *      | アスタリスク *スター* コメ印 掛算記号          | asterisk                       | アスタリスク                                       |
-| ／     | *スラッシュ* 、割算記号                        | slash                          | 斜線                                               |
-| ＼(￥) | *バックスラッシュ*                             | backslash                      | 円記号                                             |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| <      | *小なり記号*                                   | less than                      | 不等号（より小）                                   |
-| >      | *大なり記号*                                   | greater than                   | 不等号（より大）                                   |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| '      | *シングルクウォート* 、アポストロフィ、ちょん  | single quote                   | シングルクォート、アポストロフィー（本来は別もの） |
-| `      | *バッククオート*                               | back quote                     | アクサングラーブ                                   |
-| "      | *ダブルクォート* 、ちょんちょん                | double quote                   | 引用符                                             |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| ,      | *カンマ*                                       | comma                          | コンマ、セディユ                                   |
-| .      | *ピリオド* 、 *ドット* 、ポイント                | period、dot、point             | 終止符                                             |
-| ;      | *セミコロン*                                   | semicolon                      | セミコロン                                         |
-| :      | *コロン*                                       | colon                          | コロン                                             |
-| ?      | *はてな記号* 、クエスチョン・マーク            | question mark                  | 疑問符                                             |
-| !      | *びっくり記号*                                 | exclamation                    | 感嘆符                                             |
-|--------+----------------------------------------------+--------------------------------+----------------------------------------------------|
-| #      | *シャープ記号* 、ナンバー、ハッシュ            | number sign、pound sign、hash  | 番号記号、井桁（いげた）                           |
-| $      | *ドル記号*                                     | dollar sign                    | ドル記号                                           |
-| %      | *パーセント*                                   | percent                        | パーセント                                         |
-| &      | *アンド記号* 、アンパサンド                    | ampersand、and sign            | アンパサンド                                       |
-| ~      | *チルダ* 、にょろ記号                          | tilde                          | 波線、波線符号                                     |
-| _      | *アンダースコア*                               | underscore                     | アンダライン                                       |
-| ^      | *ハット* 、サーカムフレックス                  | hat, circumflex                | アクサンシルコンフレックス、キャロット             |
-| \vert      | バー *縦棒*                                    | vertical bar                   | 縦線                                               |
-
-- [[http://capm-network.com/?tag=%E3%82%AD%E3%83%BC%E3%83%9C%E3%83%BC%E3%83%89%E7%89%B9%E6%AE%8A%E8%A8%98%E5%8F%B7%E3%81%AE%E8%AA%AD%E3%81%BF%E6%96%B9][キーボード特殊記号の読み方 CapmNetwork]]
-
 *** Javaの識別子（Identifier）とキーワード（Keywords）
 **** Javaの識別子
 
